<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Head Title -->
    <string name="xiaomi_parts_title">Xiaomi Parts</string>
    <string name="xiaomi_parts_summary">Redmi Note 7/7S Tweaks</string>

    <!-- Category Title -->
    <string name="audio_category">Audio</string>
    <string name="display_category">Display</string>
    <string name="torch_category">Torch</string>
    <string name="vibration_category">Vibration</string>

    <!-- Audio amplification -->
    <string name="headphone_gain">Headphone gain</string>
    <string name="microphone_gain">Microphone gain</string>
    <string name="earpiece_gain">Earpiece gain</string>
    <string name="speaker_gain">Speaker gain</string>

    <!-- Torch -->
    <string name="torch_brightness_title">Brightness</string>

    <!-- Backlight Dimmer -->
    <string name="backlight_dimmer">Backlight Dimmer</string>
    <string name="backlight_summary">Dim the display to the maximum value</string>
    
    <!-- Vibrator -->
    <string name="vibration_strength_title">Strength</string>

    <!-- kcal -->
    <string name="device_kcal_title">Display Calibration</string>
    <string name="device_kcal_summary">Display color calibration using KCAL</string>
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>

    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>

    <string name="presets_dialog_title">Select Preset</string>

    <!-- Presets -->
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_burn_in">Burn in Shit</string>
    
    <!-- menu -->
    <string name="kcal_presets">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>

    <!-- Label for feature switch  -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch -->
    <string name="switch_bar_off">Off</string>

    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>

    <!-- Selinux Switch -->
    <string name="selinux_category">SELinux</string>
    <string name="selinux_explanation_summary">SELinux is a set of kernel modifications and user-space tools. Changing modes can cause unwanted effects. Use at your own risk.</string>
    <string name="selinux_mode_title">SELinux mode</string>
    <string name="selinux_permissive_summary">Permissive</string>
    <string name="selinux_enforcing_summary">Enforcing</string>
    <string name="selinux_persistence_title">Persist across reboots</string>
    <string name="selinux_persistence_summary">Restore the above set sepolicy mode on each boot</string>
    <string name="selinux_permissive_toast_title">Selinux set to permissive!</string>
    <string name="selinux_enforcing_toast_title">Selinux set to enforcing!</string>
    <string name="selinux_unrooted_summary">Couldn\'t detect root. You must have root to use these switches</string>
    
    <!-- Boosts -->
    <string name="boost_title">Boost</string>
    <string name="gpuboost_title">GPU Boost</string>
    <string name="cpuboost_title">CPU Boost</string>
    <string name="gpuboost_dialogTitle">Select your GPU Boost level</string>
    <string name="cpuboost_dialogTitle">Select your CPU Boost level</string>

    <!-- GPU/CPU Boost Presets -->
    <string name="gpuboost_high">High</string>
    <string name="gpuboost_medium">Medium</string>
    <string name="gpuboost_low">Low</string>
    <string name="gpuboost_disable">Disable</string>

    <string name="cpuboost_extreme">Extreme</string>
    <string name="cpuboost_high">High</string>
    <string name="cpuboost_medium">Medium</string>
    <string name="cpuboost_low">Low</string>
    <string name="cpuboost_disable">Disable</string>
    
    <!-- Touchboost -->
    <string name="touchboost_title">Enable Touchboost</string>
    <string name="touchboost_summary">Boost CPU when touch detected for smooth experience</string>
</resources>
